--- a/tools/builddef.h.in
+++ b/tools/builddef.h.in
@@ -9,4 +9,5 @@
 #if defined(USE_FFMPEG) || defined(USE_OIIO)
 #define NOTCURSES_USE_MULTIMEDIA
 #endif
+#cmakedefine USE_LIBSIXEL
 #define NOTCURSES_SHARE "@CMAKE_INSTALL_FULL_DATADIR@/notcurses"
