--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: debian-unstable
 
 steps:
 - name: debian-build
-  image: dankamongmen/unstable_builder:2021-02-24a
+  image: dankamongmen/unstable_builder:2021-03-18a
   commands:
     - export LANG=en_US.UTF-8
     - export TERM=xterm
@@ -31,7 +31,7 @@ name: alpine-edge
 
 steps:
 - name: alpine-edge
-  image: dankamongmen/edge_builder:2021-02-10a
+  image: dankamongmen/edge_builder:2021-03-18a
   commands:
     - export LANG=en_US.UTF-8
     - export TERM=xterm
@@ -47,7 +47,7 @@ name: fedora-rawhide
 
 steps:
 - name: fedora-rawhide
-  image: dankamongmen/fedora34:2021-01-08b
+  image: dankamongmen/rawhide:2021-03-18a
   commands:
     - export LANG=en_US.UTF-8
     - export TERM=xterm
@@ -72,7 +72,7 @@ name: ubuntu-hirsute
 
 steps:
 - name: ubuntu-build
-  image: dankamongmen/hirsute:2021-02-01a
+  image: dankamongmen/hirsute:2021-03-18a
   commands:
     - export LANG=es_ES.UTF-8
     - export TERM=xterm
