pkgconfig: move stdc++ dep from notcurses-core.pc to notcurses.pc #1635

--- a/tools/notcurses-core.pc.in
+++ b/tools/notcurses-core.pc.in
@@ -10,5 +10,5 @@ Version: @PROJECT_VERSION@
 Requires:
 Requires.private: tinfo
 Libs: -L${libdir} -lnotcurses-core
-Libs.private: -lunistring -lstdc++ -lm
+Libs.private: -lunistring -lm
 Cflags: -I${includedir}
