Write Requires.private in pc files based off discovered TERMINFO_LIBRARIES #1635

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ set_package_properties(Threads PROPERTIES TYPE REQUIRED)
 pkg_search_module(TERMINFO REQUIRED tinfo>=6.1 ncursesw>=6.1)
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND terminfo)
 set_package_properties(terminfo PROPERTIES TYPE REQUIRED)
+set(PKGCONF_REQ_PRIV "${TERMINFO_LIBRARIES}")
 pkg_search_module(READLINE REQUIRED readline>=8.0)
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND readline)
 set_package_properties(readline PROPERTIES TYPE REQUIRED)
