--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ steps:
   image: dankamongmen/unstable_builder:2021-04-22a
   commands:
     - export LANG=en_US.UTF-8
-    - export TERM=vt100
+    - export TERM=xterm
     - mkdir build
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Release -DUSE_QRCODEGEN=on
@@ -50,7 +50,7 @@ steps:
   image: dankamongmen/rawhide:2021-04-22a
   commands:
     - export LANG=en_US.UTF-8
-    - export TERM=vt100
+    - export TERM=xterm
     - mkdir build
     - cd build
     - cmake -DCMAKE_BUILD_TYPE=Release -DUSE_MULTIMEDIA=oiio -DUSE_QRCODEGEN=on ..
