github actions workflow: macos, ubuntu, windows+msys2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,9 @@ elseif(${USE_OIIO})
 pkg_check_modules(OIIO REQUIRED OpenImageIO>=2.1)
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND OpenImageIO)
 endif()
-find_library(MATH_LIBRARIES m)
+if (NOT MSYS)
+  find_library(MATH_LIBRARIES m)
+endif()
 if(${USE_DOCTEST})
 find_package(doctest 2.3.5)
 set_package_properties(doctest PROPERTIES TYPE REQUIRED)
@@ -121,8 +123,11 @@ if(NOT "${HAVE_QRCODEGEN_H}")
 endif()
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND qrcodegen)
 endif()
-find_library(LIBM m)
-find_library(LIBRT rt)
+if (NOT MSYS)
+  find_library(LIBM m)
+  find_library(LIBRT rt)
+endif()
+
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
 
 file(GLOB COMPATSRC CONFIGURE_DEPENDS src/compat/compat.c)
