build new python wrappers in ubuntu/fedora drones #1770 #1154

--- a/.drone.yml
+++ b/.drone.yml
@@ -62,6 +62,9 @@ steps:
     - rustc --version
     - cargo build
     - cargo t_all
+    - cd ../cffi
+    - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
+    - cd ../python
     - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
     - env LD_LIBRARY_PATH=/usr/local/lib ./notcurses-pydemo > /dev/null
     - env LD_LIBRARY_PATH=/usr/local/lib ./ncdirect-pydemo > /dev/null
@@ -85,3 +88,5 @@ steps:
     - ldconfig
     - cd ../cffi
     - python3 setup.py sdist build
+    - cd ../python
+    - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
