run notcurses-info as part of ctest

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -679,6 +679,10 @@ enable_testing()
 # the accursed Ubuntu buildd sets "TERM=unknown" for unfathomable reasons
 if(DEFINED ENV{TERM} AND NOT $ENV{TERM} STREQUAL "unknown" AND USE_POC)
 add_test(
+  NAME notcurses-info
+  COMMAND notcurses-info
+)
+add_test(
   NAME ncpp_build
   COMMAND ncpp_build
 )
