workflow: Added apt update to fix installation

--- a/.github/workflows/ubuntu_test.yml
+++ b/.github/workflows/ubuntu_test.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - name: Install tools and libraries via APT
         run: |
+          sudo apt update
           sudo apt install -y \
             build-essential \
             cmake \
