--- a/tools/builddef.h.in
+++ b/tools/builddef.h.in
@@ -1,6 +1,7 @@
 // Populated by CMake; not installed
 #cmakedefine DFSG_BUILD
 #cmakedefine USE_QRCODEGEN
+#cmakedefine USE_READLINE
 // exclusive with USE_OIIO
 #cmakedefine USE_FFMPEG
 // exclusive with USE_FFMPEG
