Fix 'Name' fields in pkgconfig files

--- a/tools/notcurses++.pc.in
+++ b/tools/notcurses++.pc.in
@@ -3,7 +3,7 @@ exec_prefix=@CMAKE_INSTALL_PREFIX@
 libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
 includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
-Name: @PROJECT_NAME@
+Name: @PROJECT_NAME@++
 Description: C++ bindings for notcurses
 Version: @PROJECT_VERSION@
 
