--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,7 @@ endif()
 # global compiler flags
 add_compile_definitions(_FORTIFY_SOURCE=2)
 add_compile_options(-Wall -Wextra -W -Wshadow -Wformat -Wno-nonnull-compare
-                    -Wformat-security -fexceptions -fstrict-aliasing
-                    -Wno-string-plus-int)
+                    -Wformat-security -fexceptions -fstrict-aliasing)
 
 message(STATUS "Requested multimedia engine: ${USE_MULTIMEDIA}")
 message(STATUS "Requested build mode: ${CMAKE_BUILD_TYPE}")
