--- a/.github/workflows/ubuntu_test.yml
+++ b/.github/workflows/ubuntu_test.yml
@@ -1,8 +1,7 @@
 ---
-name: 🐧 Tests on Ubuntu
+name: Ubuntu
 
 on:
-  workflow_dispatch:
   pull_request:
   push:
     branches:
@@ -10,11 +9,15 @@ on:
 
 jobs:
   tests:
-    runs-on: ubuntu-latest
     env:
       COLORTERM: truecolor
+      NPROC: 2
       TERM: xterm
+    name: 🐧 build, test, & install
+    runs-on: ubuntu-latest
+
     steps:
+
       - name: Install tools and libraries via APT
         run: |
           sudo apt update
@@ -37,9 +40,7 @@ jobs:
             python3-dev \
             python3-setuptools
 
-      - name: Checkout manually
-        run: |
-          git clone "https://github.com/${GITHUB_REPOSITORY}" .
+      - uses: actions/checkout@v2
 
       - name: cmake
         run: |
@@ -51,7 +52,7 @@ jobs:
       - name: make
         run: |
           cd build
-          make -j"$(nproc)"
+          make -j${NPROC}
 
       - name: ctest
         run: |
@@ -64,7 +65,7 @@ jobs:
           sudo make install
           sudo ldconfig
 
-      - name: old python wrappers
+      - name: python wrappers (old)
         run: |
           python3 -m pip install --upgrade pip
           pip install pypandoc
@@ -74,16 +75,16 @@ jobs:
           notcurses-pydemo > /dev/null
           ncdirect-pydemo > /dev/null
 
+      - name: python wrappers (new)
+        run: |
+         cd python
+         python3 setup.py build
+         sudo python3 setup.py install
+         python3 examples/000-print-version.py
+
       - name: rust wrappers
         run: |
           cd rust
           rustc --version
           cargo build
           cargo t_all
-
-      - name: Build new python wrappers
-        run: |
-         cd python
-         python3 setup.py build
-         sudo python3 setup.py install
-         python3 examples/000-print-version.py
