Added compile target for dummy python module
Mostly used to check compilation and for Clangd LSP.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -884,3 +884,9 @@ install(
     NAMELINK_COMPONENT Development
 )
 endif()
+
+option(DUMMY_PYTHON "Build dummy python module used for compile check and Clangd" OFF)
+if(${DUMMY_PYTHON})
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+add_subdirectory("./python")
+endif()
