--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,11 +83,11 @@ set_package_properties(Threads PROPERTIES TYPE REQUIRED)
 find_package(ZLIB)
 set_package_properties(ZLIB PROPERTIES TYPE REQUIRED)
 # platform-specific logics
-if(NOT MSYS AND NOT APPLE)
+if(MSYS OR WIN32)
+  set(LIBRT_LIBRARIES wsock32 ws2_32)
+elseif(NOT APPLE)
   find_library(LIBM m REQUIRED)
   find_library(LIBRT rt REQUIRED)
-elseif(MSYS)
-  find_library(LIBRT ws2_32 REQUIRED)
 endif()
 if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
   include_directories(/usr/local/include)
