pause new python wrappers on macos for now

--- a/.github/workflows/macos_test.yml
+++ b/.github/workflows/macos_test.yml
@@ -78,12 +78,12 @@ jobs:
           notcurses-pydemo > /dev/null
           ncdirect-pydemo > /dev/null
 
-      - name: python wrappers (new)
-        run: |
-         cd python
-         python3 setup.py build
-         sudo python3 setup.py install
-         python3 examples/000-print-version.py
+          #      - name: python wrappers (new)
+          #run: |
+          #cd python
+          #python3 setup.py build
+          #sudo python3 setup.py install
+          #python3 examples/000-print-version.py
 
       - name: rust wrappers
         run: |
