windows: install doctest package

--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -30,6 +30,7 @@ jobs:
             base-devel
             git
             mingw-w64-ucrt-x86_64-cmake
+            mingw-w64-ucrt-x86_64-doctest
             mingw-w64-ucrt-x86_64-ffmpeg
             mingw-w64-ucrt-x86_64-libunistring
             mingw-w64-ucrt-x86_64-ncurses
