bring terminfo back into windows build #2014

--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -33,6 +33,7 @@ jobs:
             mingw-w64-ucrt-x86_64-doctest
             mingw-w64-ucrt-x86_64-ffmpeg
             mingw-w64-ucrt-x86_64-libunistring
+            mingw-w64-ucrt-x86_64-ncurses
             mingw-w64-ucrt-x86_64-rust
             mingw-w64-ucrt-x86_64-toolchain
 
