get ncls compiling on windows, windows terminal has quads+braille

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -603,9 +603,9 @@ file(GLOB MANSOURCE1 CONFIGURE_DEPENDS doc/man/man1/*.md)
 file(GLOB MANSOURCE3 CONFIGURE_DEPENDS doc/man/man3/*.md)
 
 # all further binaries require multimedia support
-if(${USE_MULTIMEDIA} STREQUAL "none" OR WIN32)
+if(${USE_MULTIMEDIA} STREQUAL "none")
   list(FILTER MANSOURCE1 EXCLUDE REGEX "ncls.1.md")
-  #list(FILTER MANSOURCE1 EXCLUDE REGEX "ncplayer.1.md")
+  list(FILTER MANSOURCE1 EXCLUDE REGEX "ncplayer.1.md")
 else()
 ############################################################################
 # ncls
